--- a/opm/templates/login/index.html
+++ b/opm/templates/login/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-    <title> OPMS - Log In </title>
+    <title> OPHM - Log In </title>
     <link rel="icon" href="{% static 'img/Logo_Colored.png' %}">
 <body>
   <div class="section"></div>
@@ -35,7 +35,7 @@
               <div class='input-field col m12 s12'>
                 <i class="material-icons iconis prefix">person</i>
                 {{ form.username }}
-                <label for='text'>Enter your username</label>
+                <label for='id_username'>Enter your username</label>
               </div>
             </div>
 
@@ -43,7 +43,7 @@
               <div class='input-field col m12 s12'>
                 <i class="material-icons iconis prefix">lock</i>
                 {{ form.password }}
-                <label for='password'>Enter your password</label>
+                <label for='id_password'>Enter your password</label>
               </div>
             </div>
             <br />
