--- a/opm/static/css/HOMEPAGE.css
+++ b/opm/static/css/HOMEPAGE.css
@@ -1,4 +1,4 @@
- body {
+body {
       display: flex;
       min-height: 100vh;
       flex-direction: column;
@@ -9,37 +9,34 @@
     }
 
     body {
-      background: linear-gradient(to top right, #53a49c 0%, #cfe7e7   100%);
+      background: #409a90;
     }
 
     #container {
        width: 300%;
     }
 
-    .hero-image {
-    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url("../img/bg_17.png");
-
-    /* Set a specific height */
-    height: 50%;
-
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-   }
+    #searchIcon{
+        color: white;
+        padding-top: 10px
+    }
 
     #greeting{
         font-family: Montserrat;
 
     }
 
-    nav ul li:hover {
-       background-color: rgba(255, 255, 255, 0.1);
-       box-shadow: none;
+    .tab{
+        padding-right: 10px;
+        background-color:#80C6C1;
+
+    }
+    .tab:hover{
+
+        background-color:#89bcb6;
+
     }
 
     .nav-wrapper .brand-logo img {
-    height: 63px;
+    height: 100%;
 }
