--- a/opm/templates/patientrecords/patientRecords.html
+++ b/opm/templates/patientrecords/patientRecords.html
@@ -2,13 +2,10 @@
 {% load staticfiles%}
 
 {% block content %}
-    <title> OPMS - History of Records</title>
+    <title> OPHM - History of Records</title>
         <!------------------------------------------------------- BODY STARTS HERE ------------------------------------------------------------->
 <div class="col s12 m12 l12 center white">
-<br>
-    <a href="{% url 'viewassignedpatients' %}" class="waves-effect waves-light btn"><i class="material-icons left">keyboard_backspace</i>go back</a>
             <div class="row">
-                <div class="section"></div>
                 <div class="col s3"></div>
                 <div class="col s6">
                     <h3 id="greeting"><i class="material-icons" style="font-size: 40px;">list</i>&nbsp;&nbsp; History of Records</h3>
@@ -16,9 +13,7 @@
                 </div>
                 <div class="col s3"></div>
             </div>
-            <div class="section"></div>
             <div class="divider"></div>
-            <div class="section"></div>
 
         </div>
             <div class="white" style="padding: 0px 20px 0px 30px">
@@ -160,6 +155,10 @@
                 </div>
             {% endif %}
             </div>
+        <div class="divider"></div>
+        <div class="align-left" style="padding: 2%">
+            <a href="{% url 'viewassignedpatients' %}" class="waves-effect waves-light btn"><i class="material-icons left">keyboard_backspace</i>go back</a>
+        </div>
 
         </div>
 
